# test-matsuzawa-20251216

./: pyproject.toml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-1-lstm-cifar10.yaml  comparative-1-lstm-cifar100.yaml  comparative-1-lstm-penntreebank.yaml  comparative-1-resnet18-cifar10.yaml  comparative-1-resnet18-cifar100.yaml  comparative-1-resnet18-penntreebank.yaml  comparative-1-resnet50-cifar10.yaml  comparative-1-resnet50-cifar100.yaml  comparative-1-resnet50-penntreebank.yaml  comparative-2-lstm-cifar10.yaml  comparative-2-lstm-cifar100.yaml  comparative-2-lstm-penntreebank.yaml  comparative-2-resnet18-cifar10.yaml  comparative-2-resnet18-cifar100.yaml  comparative-2-resnet18-penntreebank.yaml  comparative-2-resnet50-cifar10.yaml  comparative-2-resnet50-cifar100.yaml  comparative-2-resnet50-penntreebank.yaml  comparative-3-lstm-cifar10.yaml  comparative-3-lstm-cifar100.yaml  comparative-3-lstm-penntreebank.yaml  comparative-3-resnet18-cifar10.yaml  comparative-3-resnet18-cifar100.yaml  comparative-3-resnet18-penntreebank.yaml  comparative-3-resnet50-cifar10.yaml  comparative-3-resnet50-cifar100.yaml  comparative-3-resnet50-penntreebank.yaml  proposed-lstm-cifar10.yaml  proposed-lstm-cifar100.yaml  proposed-lstm-penntreebank.yaml  proposed-resnet18-cifar10.yaml  proposed-resnet18-cifar100.yaml  proposed-resnet18-penntreebank.yaml  proposed-resnet50-cifar10.yaml  proposed-resnet50-cifar100.yaml  proposed-resnet50-penntreebank.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
